[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isopredict"
version = "1.0.0"
dependencies = [
    "setuptools",
    "graphviz==0.20.1",
    "z3_solver==4.11.2.0",
    "tabulate==0.9.0",
    "pandas",
]
authors = [
    { name="Chujun Geng", email="geng.195@osu.edu" },
]
description = "Predicts unserializable behaviors from applications running on weakly isolated datastores"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
isopredict = "isopredict:main"
isobench = "isopredict:runbench"
isostat = "isopredict:benchstats"